app/assets/stylesheets/mediaqueries/_s.scss
// ---------------------------------------------------------------
//
//  Breakpoint S
//
// ---------------------------------------------------------------

@include breakpoint(S) {

  @include mqindicator('S');

  // Header ######################################

  .Banner__link {
    padding: 0 0 5px 0;
  }

  .Banner {
    .page-wrap & {
      position: relative;
      max-height: 10px;
      overflow: hidden;
    }
  }

  .top-bar__world-select-button {
    display: block;
    background-position: left center;
  }

  .top-bar__container {
    padding: 0 15px;
  }

  .top-bar__world-link {
    display: none;
  }

  .Logo {
    display: none;
  }

  .Logo--start {
    display: none;
  }

  .Logo--notstart {
    display: none;


    body.ar & {
      margin-right: 15px;
    }

    body.family &,
    body.refugees & {
      background-size: 95px 38px;
    }

  }

  .Claim {
    padding-top: 10px;
    margin-top: 0;
    max-width: 100%;
  }

  .Claim__secondrow {
    margin: 15px 0 0;
    padding: 0;
    max-width: 100%;
  }

  .header-main {
    position: relative;
    right: 0;
    left: 0;
    z-index: 130;
    background: $brand_beige;
    min-height: 0;
    pointer-events: none;

    .template--pages-home & {
      position: static;
      top: auto;
      right: auto;
      left: auto;
      z-index: auto;
    }
  }

  .header-main__foreground {
    body.refugees &,
    body.family & {
      background-position: center bottom;
    }

    background-size: 80% auto;

  }

  a.nav-lang__google {
    margin-right: 10px;
    margin-left: 10px;
  }

  button.nav-lang__button {
    background-size: 42px auto;
  }

  .Distributor {
    margin-top: 0;
    padding-bottom: 5px;
    height: auto;
    pointer-events: all !important;
  }

  .Distributor--start {
    position: static;
    padding-bottom: 0;
  }

  .Distributor--navigation {
    padding-bottom: 0;
    width: 100%;

    &.is-enlarged {
      z-index: 20;
    }

    .JS-Geolocation__prompt {
      bottom: 35px;
      margin: 0 20% 0 0;
      padding: 5px;
      width: 80%;
    }

  }

  .Distributor__search-form {
    &.is-fixed {
      position: fixed;
      top: 0;
      border-bottom: 1px solid $brand_white;
    }
  }

  .JS-Geolocation__remove {
    top: 5px;
    right: 10px;

    .Distributor--navigation & {
      top: 2px;
      right: 60px;
    }
  }

  #new_search_form {
    position: relative;
    z-index: 30;
    display: block;
    padding: 10px 0 0 15px;
    min-height: 58px;
    max-height: 98px;
    width: auto;


    body.ar & {
      padding: 10px 15px 0 0;

      label.string {
        right: 9px;
        left: auto;
      }
    }

    .Distributor.is-enlarged & {

      .tt-dropdown-menu {
        right: 1px; // override JS
      }
    }

    .template--pages-home & {
      max-height: none;
      padding-top: 20px;
      border-top: none;

      .input.string {
        padding-right: 0;

        &.search_form_search_location {
          display: block;
        }
      }
    }

    #search_form_query,
    #search_form_search_location {
      @include input-placeholder(rgba($brand_brown, .72), 400, 16px);
      height: 35px;
      font-size: 16px;
      line-height: 35px;
      float: none;
      max-width: none;
      width: 100%;
    }

    #search_form_query,
    #search_form_search_location,
    .main-search__submit {
      .template--pages-home & {
        height: 40px;
        line-height: 40px;
      }
    }

    #search_form_search_location {
      padding-left: 40px;
    }

    #search_form_query {
      padding-left: 53px;
    }


    .main-search__submit {
      position: absolute;
      top: 10px;
      right: 15px;
      width: 40px;
      background-size: 60%;
      bottom: 10px;
      height: auto;

      body.template--pages-home.ar & {
        left: 0;
      }

      body.ar & {
        left: 15px;
        right: auto;
        z-index: 20;
        border-top-left-radius: 6px;
        border-bottom-right-radius: 0;
      }

      .template--pages-home & {
        position: relative;
        top: 0;
        right: auto;
      }
    }

    .input {
      &.string {
        display: block;
        padding-right: 55px;
        width: 100%;


        .template--pages-home & {
          height: 40px;
        }

        &.search_form_search_location {
          margin-top: 5px;
          margin-bottom: 10px;

          &.is-visible {
            display: block;
          }
        }
      }
    }

    label {
      &.string {
        top: 0;
        left: 9px;
        font-size: 16px;
        line-height: 35px;

        .template--pages-home & {
          top: auto;
          bottom: 3px;
          left: 8px;
          max-height: 40px;
        }
      }
    }
  }

  .nav-welt--start {
    left: 0;
  }

  .nav-welt__list {
    body.ar & {
      float: none;
    }
  }

  .nav-welt--notstart {
    float: right;
    height: 31px;
    margin-top: 21px;
    margin-right: 7px;

    body.ar & {
      float: left;
    }

    li {
      a:before {
        display: none;
      }
    }

    a {
      font-family: "roboto-bold", Roboto, sans-serif;
    }
  }

  .nav-welt__listitem {
    min-width: 0;

    .template--pages-home & {
      width: 50%;
    }

    .template--pages-home &:first-child a {
      border-radius: 0;
    }

    a {
      font-size: 15px;
      padding: 0 12px;
    }
  }

  .nav-welt__listitem--start {
    a {
      height: 28px;
    }
  }

  .nav-lang__title {
    padding-left: 0;
    background: none;
    font-size: 12px;
  }

  a.nav-lang__google {
    top: 9px;
    width: 55px;
  }

  .nav-lang__container {
    padding-right: 78px;
  }

  .nav-lang__list {
    li {
      font-size: 13px;
    }
  }

  .search-form--input-wrapper {
    left: 0;
    z-index: 12;

    body.ar & {
      right: 0;
      left: auto;
    }
  }

  .nav-sections {
    margin: 0;
  }

  .nav-sections__headline {
    margin-bottom: 10px;
    text-align: left;

    body.ar & {
      text-align: right;
    }
  }

  .nav-sections__listitem {
    height: 50px;
    line-height: 45px; // closer to optical vertical middle
  }

  span.tt-dropdown-menu {
    // specificity, overriding JS
    right: 0 !important; // overriding JS
  }

  // Content ######################################

  .wrapper-inner {
    padding: 0 15px;
  }

  .main-search__advanced-filter--within-content-main {
    margin: 0;
    position: relative;
    transform: initial;
  }

  .content-main {

    .template--pages-home & {
      padding-top: 0;
    }

    &.content-main--invalid_location {
      padding-top: 80px;
    }

    body[class="template--pages-"] & {
      padding-top: 68px;
    }
  }

  .Listing-results__organization {
    padding-right: 0;
  }

  .Listing-results__updateinfo {
    position: relative;
    width: 100%;
    background: transparent;
    padding: 0;
    text-align: left;
    color: inherit;

    .fa {
      color: $brand_green;
    }
  }

  .section-start__headline {
    height: 35px;
    font-size: 16px;
    line-height: 37px;
  }

  .section-start__body {
    font-size: 14px;
  }

  .section-team__member {
    width: 100%;
    margin-left: 0;

    &:nth-of-type(4n+1) {
      margin-left: 0;
    }

    &:nth-of-type(3n+1) {
      margin-left: 0;
    }

    &:nth-of-type(2n+1) {
      margin-left: 0;
    }

  }

  .Listing-categories__item {
    @extend %clearfix;

    a {
      margin: 0 4px 4px 0;
      padding: 0 8px;
      height: 24px;
      font-size: 14px;
      line-height: 24px;
    }
  }

  .Categories {
    display: none;
  }

  .Listing-results__headline {
    font-size: 16px;
  }

  .Listing-results__listitem {
    margin-bottom: 15px;
  }

  .template--previews-show_organization {
    .content-main.content-main--wide {
      padding: 105px 0 0;
    }
  }

  .page,
  .first,
  .last,
  .next,
  .prev {
    margin-bottom: 5px;
  }

  .contact-form {
    margin-top: 22px;

    .string input,
    .email input,
    textarea,
    &.formtastic .inline-errors {
      width: 100%;
    }
  }

  .content-main--section_choice {
    height: 70vh;
    min-height: 460px;

    &.content-main.content-main--wide {
      margin: 0;
      align-items: flex-start;
    }
  }

  .section-choice {
    transform: none;
    left: auto;
    width: auto;
    margin: 0 10px;
  }

  .section-choice__container {
    margin-bottom: 0;
  }

  .section-choice__stage {
    background-size: 47% auto;
    background-position: right bottom;
  }

  .section-choice__cta {
    width: 100%;
    font-size: 14px;
    margin: 0;
  }

  .section-choice__headline {
    height: 45%;
    position: absolute;
    left: 10px;
    background-position: left center;
    top: 35px;
  }

  .template--pages-section_choice {
    .footer-main {
      padding-top: 0;
    }
  }

  // Twitter Typeahead ###########################

  .template--pages-home {
    #new_search_form {
      .input.string {
        min-height: 40px;
        height: auto !important;

        &.search_form_search_location {
          margin: 10px 0;
        }
      }
    }

  }

  // Filter offer#index ######################################

  .filter-form {
    padding: 12px 0 5px;
    border-radius: 0;
    margin-top: 0;
    margin-bottom: 30px;

    &:after {
      display: none;
    }

    .input {
      padding: 0;
    }

    .col-form-inner {
      width: 100%;
    }
  }

  .filter-form__radio label,
  .filter-form__checkbox-wrapper label {
    font-size: initial;
  }

  .filter-form__headline {
    display: none;
  }

  .filter-form__fieldset {
    padding: 0;
    flex: 1 0 100%;
  }

  .filter-form__fieldset__headline {
    width: 100%;
    color: $brand_brown;
    cursor: pointer;
    background-size: 6px 8px;

    body.ar & {
      background-position: left center;
    }

    &.is-active {
      background: image-url('ico_fieldset_collapse.svg') no-repeat right center;
      background-size: 6px 8px;
    }
  }

  .filter-form__fieldset__wrapper {
    margin-bottom: 20px;
  }

  .filter-form__headline {
    margin-bottom: 10px;
    font-size: 16px;
  }

  .filter-form__expander {
    display: none;
  }

  [type="submit"].filter-form__submit,
  .filter-form__submit {
    width: 100%;
  }

  // Footer ######################################

  .nav-legal {
    margin: 20px 0;
  }

  .nav-legal__listitem {
    float: none;
    margin-left: 0;
    line-height: 22px;

    &:before {
      content: '';
    }
  }

  // Misc ######################################

  .popup_content {
    width: 80% !important; // override inline JS

    .formtastic {
      #update_request_email {
        margin: 0;
        padding-right: 0;
        width: 100%;
        text-align: center;
      }

      input[type="submit"] {
        position: relative;
        top: auto;
        right: auto;
        width: 100%;
      }

      p.inline-errors {
        position: relative;
        bottom: auto;
        left: auto;
        margin: 0;
        width: 100%;
        text-align: center;
      }

      li.input.error {
        padding-bottom: 0;
      }
    }
  }

  #unavailable_location_overlay {
    .formtastic {
      #update_request_email {
        max-width: 100%;
      }
    }
  }

  .Banner {
    position: fixed;
    right: 0;
    left: 0;
    z-index: 300;
  }

  // Styling for JS-generated button
  .jump-to-categories {
    position: absolute;
    top: 52px;
    right: 0;
    left: auto;
    z-index: 120;
    display: block;
    margin: 0;
    padding: 3px 15px;
    width: 40%;
    height: 30px;
    color: $brand_white;
    text-align: right;
    text-decoration: none;
    line-height: 28px;
  }

  #categories {
    margin-bottom: 65px;

    // Creating offset for internal anchor jump
    &:before {
      display: block;
      margin-top: -68px;
      height: 68px;
      content: "";

      .template--offers-index & {
        display: none;
      }
    }
  }

  div.qtip-content {
    font-size: 11px;
  }

}

